[gd_scene load_steps=13 format=3 uid="uid://4eygpv6ar4kx"]

[ext_resource type="Script" uid="uid://3nwermc4nas1" path="res://scenes/components/effect_flash_component.gd" id="1_diwfx"]
[ext_resource type="PackedScene" uid="uid://cfivvn8vyesq7" path="res://particles/scenes/damage_particles.tscn" id="2_abops"]
[ext_resource type="Material" uid="uid://cgmec1v7lguua" path="res://particles/heal_particles.tres" id="2_ooi4k"]
[ext_resource type="Material" uid="uid://qakrfenm4nma" path="res://scenes/maps/parts/add_something_material.tres" id="4_otldg"]
[ext_resource type="ArrayMesh" uid="uid://cdxxayqndwye2" path="res://scenes/projectiles/snowflake.tres" id="5_204de"]
[ext_resource type="Material" uid="uid://mxa00j82xxaw" path="res://particles/fire_particles.tres" id="6_6k7nf"]
[ext_resource type="SphereMesh" uid="uid://nou7grt4dl00" path="res://scenes/projectiles/fireball_projectile_particle_mesh.tres" id="7_a3pmk"]
[ext_resource type="Material" uid="uid://dqtq1u27a3nfc" path="res://particles/acid_particles.tres" id="8_a3pmk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6eru1"]
albedo_color = Color(0, 2, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_pu0f0"]
material = SubResource("StandardMaterial3D_6eru1")
size = Vector2(0.12, 0.04)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tevgt"]
albedo_color = Color(0, 2, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_6lppl"]
material = SubResource("StandardMaterial3D_tevgt")
size = Vector2(0.04, 0.12)

[node name="EffectFlashComponent" type="Node3D"]
script = ExtResource("1_diwfx")
damage_particles_scene = ExtResource("2_abops")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transparency = 0.8
cast_shadow = 0
emitting = false
amount = 5
lifetime = 0.7
one_shot = true
process_material = ExtResource("2_ooi4k")
draw_passes = 2
draw_pass_1 = SubResource("QuadMesh_pu0f0")
draw_pass_2 = SubResource("QuadMesh_6lppl")

[node name="SlowDownParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
emitting = false
amount = 10
lifetime = 0.5
process_material = ExtResource("4_otldg")
draw_pass_1 = ExtResource("5_204de")

[node name="OnFireParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
transparency = 0.5
cast_shadow = 0
emitting = false
amount = 30
lifetime = 1.5
process_material = ExtResource("6_6k7nf")
draw_pass_1 = ExtResource("7_a3pmk")

[node name="OnAcidParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
transparency = 0.5
cast_shadow = 0
emitting = false
amount = 30
lifetime = 1.5
process_material = ExtResource("8_a3pmk")
draw_pass_1 = ExtResource("7_a3pmk")
